# py-ups-rs

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
.github/workflows/: python-app.yml
pyupsrs/: __init__.py  app.py  config.py
pyupsrs/api/: __init__.py
pyupsrs/api/middleware/: __init__.py  auth.py  logging.py
pyupsrs/api/resources/: __init__.py  subscriptions.py  websocket_resource.py  workitems.py
pyupsrs/api/serializers/: __init__.py  dicom_json.py
pyupsrs/domain/: __init__.py
pyupsrs/domain/models/: __init__.py  ups.py
pyupsrs/domain/services/: __init__.py  service_provider.py  subscription_service.py  workitem_service.py
pyupsrs/storage/: __init__.py  database.py
pyupsrs/storage/repositories/: __init__.py  subscription_repository.py  workitem_repository.py
pyupsrs/utils/: __init__.py  class_logger.py  dicom_query_matcher.py  dicom_utils.py
pyupsrs/websocket/: __init__.py  connection_manager.py  notification_service.py
tests/: conftest.py  pytest.ini
tests/integration/: __init__.py  test_full_workflow.py  test_ups_rs.py
tests/integration/transactions/: __init__.py  test_batch_notification_processing.py  test_change_state.py  test_create_workitem.py  test_multiple_subscribers.py  test_subscribe.py  test_subscription_connection_interruption.py  test_subscription_deletion.py  test_subscription_filter_multiple_criteria.py  test_subscription_filtered.py  test_subscription_global.py  test_subscription_reactivation.py  test_subscription_specific.py  test_update_workitem.py  test_workitem_transactions.py
tests/unit/: __init__.py  test_connection_manager.py  test_notification_service.py  test_subscription_service.py
tests/unit/api/: __init__.py
tests/unit/domain/: __init__.py
tests/unit/storage/: __init__.py
tests/unit/websocket/: __init__.py
